<resources>
    <string name="app_name">Weight and See</string>
    <string name="user_label">Enter Username:</string>
    <string name="pwd_label">Enter Password:</string>
    <string name="first_label">Enter First Name:</string>
    <string name="last_label">Enter Last Name:</string>
    <string name="email_label">Enter Email:</string>
    <string name="register_label">Register a new Account</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">Create Account</string>
    <string name="register_title">Enter the below information to register a new Account</string>
    <string name="title_activity_login">Login or Register</string>
    <string name="change_order">CHANGE ORDER OF LIST</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_success">Login Successful!</string>
    <string name="logout">Logout of Application</string>
    <string name="weights_title">"Current Weight List"</string>
    <string name="prompt_weight">"Enter Weight"</string>
    <string name="prompt_date">"Enter Date"</string>
    <string name="new_weight_save">"Save Weight"</string>
    <string name="name_message">see your progress.</string>
    <string name="menu_closed">Menu</string>
    <string name="add_daily_weight">Add a New Weight</string>
    <string name="list_loading">Loading the list...</string>
    <string name="user_error_message">ERROR! Some data is incorrect or this user already exists. Try Again.</string>
    <string name="settings">Settings</string>
    <string name="pref_title_theme">Dark theme</string>
    <string name="pref_description_theme">Turn on dark theme</string>
    <string name="pref_description_sms">Turn on to accept SMS message</string>
    <string name="pref_title_sms_question">SMS Approved</string>
    <string name="pref_title_sms_approval">Do you agree to allow this app to send SMS messages?</string>
    <string name="pref_sms_summary">By accepting SMS messages, you agree to allow the Weight and See app to send you text messages with alerts. </string>
    <string name="pref_sms_switch">I Approve</string>
    <string name="pref_sms_approved">You have agreed to receive text messages.</string>
    <string name="pref_sms_notapproved">You have NOT agreed to receive text messages.</string>
    <string name="pref_title_weight_order">Weight order</string>
    <string name="pref_title_email_question">Email Notifications Approved</string>
    <string name="pref_none">None</string>

    <string-array name="pref_weight_order">
        <item>Alphabetic</item>
        <item>Most recent first</item>
        <item>Oldest first</item>
    </string-array>

    <string-array name="pref_weight_order_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>